--- a/ArgentBank-website-main/FRONTEND/argent-bank/src/components/form/_form.scss
+++ b/ArgentBank-website-main/FRONTEND/argent-bank/src/components/form/_form.scss
@@ -7,7 +7,6 @@
   height: 361px;
   margin: 0 auto;
   margin-top: 3rem;
-  // margin-bottom: 3rem;
   padding: 2rem;
 }
 
@@ -37,4 +36,20 @@
 .input-wrapper input {
   padding: 5px;
   font-size: 1.2rem;
+}
+
+.errorMessage{
+  display: none;
+  color: #ff0000;
+  background-color: #ffcccc;
+  padding: 5px;
+  border: 1px solid #ff0000;
+  border-radius: 4px;
+}
+
+.sign-in-content.expanded{
+  height: 391px;
+  .errorMessage{
+    display: flex;
+  }
 }
