Change UserName functionality

--- a/ArgentBank-website-main/FRONTEND/argent-bank/src/main.scss
+++ b/ArgentBank-website-main/FRONTEND/argent-bank/src/main.scss
@@ -9,7 +9,7 @@
 @forward './components/welcome/welcome';
 @forward './components/account/account';
 @forward './sass/color';
-
+@forward './components/edit_user/edit_user';
 
 
 
