--- a/ArgentBank-website-main/FRONTEND/argent-bank/src/sass/_color.scss
+++ b/ArgentBank-website-main/FRONTEND/argent-bank/src/sass/_color.scss
@@ -10,6 +10,8 @@ $neutral-main-color: black ;
 $neutral-second-color: #222;
 $neutral-third-color: #ccc;
 $neutral-fourth-color:  #fff;
+$neutral-five-color: #d8d8d8;
+$neutral-six-color: #777;
  
 // Background color 
 $background-color :  #12002b;
